# forecasting_neural_networks

./: .env.example  Application.py  README.md  WCTrainPredict.py  pyproject.toml
Forecasting/: __init__.py
Forecasting/Helpers/: Functions.py  __init__.py
Forecasting/Models/: __init__.py
Forecasting/Models/DataModel/: WaterConsumptionDataModel.py  __init__.py
Forecasting/Models/data_model/: water_consumption_data_model.py
Forecasting/Settings/: ApplicationConfig.py  DBConnect.py  __init__.py
Forecasting/neural_network/: __init__.py  config.py  train_predict.py
core/: __init__.py  console.py  constants.py  exceptions.py  logging_config.py
data/: water_consumption.json
