[project]
name = "forecasting-neural-networks"
version = "0.1.0"
description = "Neural network forecasting for monthly drinking-water consumption"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gonzalo Chacaltana Buleje", email = "gchacaltanab@outlook.com" },
]
dependencies = [
    "numpy==1.19.3",
    "pandas==1.0.1",
    "Keras==2.4.3",
    "tensorflow==2.4.0",
    "scikit-learn==0.22.1",
    "matplotlib==3.1.3",
    "python-dotenv",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forecasting*", "core*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
